--- a/examples/live-query/package.json
+++ b/examples/live-query/package.json
@@ -8,12 +8,12 @@
     "check": "tsc --pretty --noEmit"
   },
   "devDependencies": {
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "ts-node": "10.8.1",
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.7.4"
   },
   "dependencies": {
-    "@envelop/live-query": "3.3.0",
+    "@envelop/live-query": "3.4.0",
     "@n1ru4l/in-memory-live-query-store": "0.9.0",
     "@graphql-yoga/node": "2.9.2",
     "graphql": "16.1.0"
