--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "pretty-quick": "pretty-quick --staged",
     "prebuild": "rimraf packages/*/dist",
     "check": "yarn workspaces run check",
-    "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && yarn workspace @graphql-yoga/common run generate-graphiql-html && tsc --project tsconfig.build.json && bob build",
+    "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && yarn workspace @graphql-yoga/common run generate-graphiql-html && bob build",
     "test": "jest --passWithNoTests --forceExit",
     "release": "yarn build && changeset publish",
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
@@ -61,7 +61,7 @@
     "babel-jest": "^28.0.0",
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
-    "bob-the-bundler": "^1.5.1",
+    "bob-the-bundler": "2.0.0",
     "eslint": "^8.15.0",
     "graphql": "^16.1.0",
     "husky": "^8.0.0",
@@ -72,7 +72,7 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^28.0.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.7.4"
   },
   "resolutions": {
     "@changesets/apply-release-plan": "6.0.0",
