--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,11 +7,10 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/common"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
     "generate-graphiql-html": "node scripts/generate-graphiql-html.js",
-    "prepack": "bob prepack",
     "check": "tsc --pretty --noEmit"
   },
   "keywords": [
@@ -27,40 +26,61 @@
   },
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      },
+      "import": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "default": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      }
     },
     "./*": {
-      "require": "./dist/*.js",
-      "import": "./dist/*.mjs"
-    }
+      "require": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/cjs/*.js"
+      },
+      "import": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
+      },
+      "default": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
+      }
+    },
+    "./package.json": "./package.json"
   },
-  "typings": "dist/index.d.ts",
+  "typings": "dist/typings/index.d.ts",
   "typescript": {
-    "definition": "dist/index.d.ts"
+    "definition": "dist/typings/index.d.ts"
   },
   "publishConfig": {
     "directory": "dist",
     "access": "public"
   },
   "dependencies": {
-    "@envelop/core": "^2.0.0",
-    "@envelop/parser-cache": "^4.0.0",
-    "@envelop/validation-cache": "^4.0.0",
+    "@envelop/core": "^2.4.0",
+    "@envelop/parser-cache": "^4.4.0",
+    "@envelop/validation-cache": "^4.4.0",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@graphql-tools/schema": "^8.3.1",
-    "@graphql-tools/utils": "^8.6.0",
-    "@graphql-yoga/subscription": "2.0.0",
+    "@graphql-tools/schema": "^8.5.0",
+    "@graphql-tools/utils": "^8.8.0",
+    "@graphql-yoga/subscription": "^2.0.0",
     "cross-undici-fetch": "^0.4.2",
     "dset": "^3.1.1",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7",
-    "bob-the-bundler": "^1.5.1",
+    "@types/node": "16.11.7",
     "html-minifier-terser": "7.0.0-beta.0"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
-  }
+  },
+  "type": "module"
 }
