--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -7,10 +7,9 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/node"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
-    "prepack": "bob prepack",
     "check": "tsc --pretty --noEmit"
   },
   "keywords": [
@@ -26,42 +25,63 @@
   },
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      },
+      "import": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "default": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      }
     },
     "./*": {
-      "require": "./dist/*.js",
-      "import": "./dist/*.mjs"
-    }
+      "require": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/cjs/*.js"
+      },
+      "import": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
+      },
+      "default": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
+      }
+    },
+    "./package.json": "./package.json"
   },
-  "typings": "dist/index.d.ts",
+  "typings": "dist/typings/index.d.ts",
   "typescript": {
-    "definition": "dist/index.d.ts"
+    "definition": "dist/typings/index.d.ts"
   },
   "publishConfig": {
     "directory": "dist",
     "access": "public"
   },
   "dependencies": {
-    "@envelop/core": "^2.0.0",
-    "@graphql-tools/utils": "^8.6.0",
-    "@graphql-yoga/common": "2.8.3",
-    "@graphql-yoga/subscription": "2.0.0",
+    "@envelop/core": "^2.4.0",
+    "@graphql-tools/utils": "^8.8.0",
+    "@graphql-yoga/common": "^2.8.3",
+    "@graphql-yoga/subscription": "^2.0.0",
     "cross-undici-fetch": "^0.4.2",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@envelop/disable-introspection": "^3.3.1",
-    "@envelop/live-query": "3.3.3",
-    "@types/eventsource": "^1",
-    "@types/node": "^16.11.7",
-    "bob-the-bundler": "^1.5.1",
-    "eventsource": "^2.0.0",
+    "@envelop/disable-introspection": "^3.4.0",
+    "@envelop/live-query": "^3.4.0",
+    "@types/eventsource": "1.1.9",
+    "@types/node": "16.11.7",
+    "eventsource": "2.0.2",
     "graphql": "^16.0.1",
-    "graphql-scalars": "^1.16.1",
+    "graphql-scalars": "1.17.0",
     "puppeteer": "15.1.1"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
-  }
+  },
+  "type": "module"
 }
