--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Fetch
-        run: git fetch master
+        run: git fetch origin master
       - name: Use Node 18
         uses: actions/setup-node@v3
         with:
