chore(ci): fix algolia script git issue (#1322)
* chore(ci): fix algolia script git issue

* temporary: trigger "Algolia integrity" GH workflow

* fix(ci): typo

* fix(ci): "Website integrity" fix

* Revert "temporary: trigger "Algolia integrity" GH workflow"

This reverts commit 10576f2bc11613ca386c5d25bbe9d3248576dd9f.

--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Fetch
+        run: git fetch origin master
       - name: Use Node 18
         uses: actions/setup-node@v3
         with:
