run tests on all EventTarget implementations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
       "@graphql-yoga/plugin-*": ["packages/plugins/*/src/index.ts"],
       "@graphql-yoga/typed-event-target": [
         "packages/event-target/typed-event-target/src/index.ts"
+      ],
+      "@graphql-yoga/redis-event-target": [
+        "packages/event-target/redis-event-target/src/index.ts"
       ]
     },
     "jsx": "preserve"
