--- a/packages/event-target/redis-event-target/package.json
+++ b/packages/event-target/redis-event-target/package.json
@@ -7,10 +7,7 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/event-target/redis-event-target"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "scripts": {
-    "prepack": "bob prepack",
     "check": "tsc --pretty --noEmit"
   },
   "keywords": [
@@ -21,27 +18,6 @@
   ],
   "author": "Laurin Quast <laurinquast@googlemail.com>",
   "license": "MIT",
-  "buildOptions": {
-    "input": "./src/index.ts"
-  },
-  "exports": {
-    ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
-    },
-    "./*": {
-      "require": "./dist/*.js",
-      "import": "./dist/*.mjs"
-    }
-  },
-  "typings": "dist/index.d.ts",
-  "typescript": {
-    "definition": "dist/index.d.ts"
-  },
-  "publishConfig": {
-    "directory": "dist",
-    "access": "public"
-  },
   "dependencies": {
     "@graphql-yoga/typed-event-target": "^0.0.0"
   },
@@ -53,5 +29,32 @@
     "bob-the-bundler": "^1.5.1",
     "ioredis": "5.0.6",
     "ioredis-mock": "8.2.2"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "exports": {
+    ".": {
+      "require": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      },
+      "import": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "default": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      }
+    },
+    "./package.json": "./package.json"
+  },
+  "typings": "dist/typings/index.d.ts",
+  "typescript": {
+    "definition": "dist/typings/index.d.ts"
+  },
+  "publishConfig": {
+    "directory": "dist",
+    "access": "public"
   }
 }
