--- a/packages/event-target/typed-event-target/package.json
+++ b/packages/event-target/typed-event-target/package.json
@@ -7,8 +7,6 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/event-target/typed-event-target"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "scripts": {
     "prepack": "bob prepack",
     "check": "tsc --pretty --noEmit"
@@ -24,29 +22,38 @@
   "buildOptions": {
     "input": "./src/index.ts"
   },
-  "exports": {
-    ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
-    },
-    "./*": {
-      "require": "./dist/*.js",
-      "import": "./dist/*.mjs"
-    }
-  },
-  "typings": "dist/index.d.ts",
-  "typescript": {
-    "definition": "dist/index.d.ts"
-  },
-  "publishConfig": {
-    "directory": "dist",
-    "access": "public"
-  },
   "dependencies": {
     "@repeaterjs/repeater": "^3.0.4",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "bob-the-bundler": "^1.5.1"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "exports": {
+    ".": {
+      "require": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      },
+      "import": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "default": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      }
+    },
+    "./package.json": "./package.json"
+  },
+  "typings": "dist/typings/index.d.ts",
+  "typescript": {
+    "definition": "dist/typings/index.d.ts"
+  },
+  "publishConfig": {
+    "directory": "dist",
+    "access": "public"
   }
 }
