--- a/packages/event-target/redis-event-target/package.json
+++ b/packages/event-target/redis-event-target/package.json
@@ -30,6 +30,7 @@
     "ioredis": "5.0.6",
     "ioredis-mock": "8.2.2"
   },
+  "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "exports": {
