--- a/packages/event-target/typed-event-target/package.json
+++ b/packages/event-target/typed-event-target/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "bob-the-bundler": "^1.5.1"
   },
+  "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "exports": {
