Deprecate '.start' and '.stop' methods for common package

--- a/examples/cloudflare-modules/tsconfig.json
+++ b/examples/cloudflare-modules/tsconfig.json
@@ -6,8 +6,7 @@
     "lib": ["esnext"],
     "moduleResolution": "node",
     "sourceMap": true,
-    "skipLibCheck": true,
-    "types": ["@cloudflare/workers-types"]
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "test"]
