--- a/examples/file-upload/tsconfig.json
+++ b/examples/file-upload/tsconfig.json
@@ -7,6 +7,6 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"]
+    "lib": ["esnext"]
   }
 }
