--- a/packages/event-target/redis-event-target/package.json
+++ b/packages/event-target/redis-event-target/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/ioredis-mock": "5.6.0",
-    "bob-the-bundler": "^1.5.1",
+    "event-target-polyfill": "0.0.3",
     "ioredis": "5.0.6",
     "ioredis-mock": "8.2.2"
   },
