--- a/packages/event-target/typed-event-target/package.json
+++ b/packages/event-target/typed-event-target/package.json
@@ -27,7 +27,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "bob-the-bundler": "^1.5.1"
+    "event-target-polyfill": "0.0.3"
   },
   "type": "module",
   "main": "dist/cjs/index.js",
