--- a/packages/event-target/typed-event-target/package.json
+++ b/packages/event-target/typed-event-target/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@graphql-yoga/subscription",
-  "version": "2.1.0",
+  "name": "@graphql-yoga/typed-event-target",
+  "version": "0.0.0",
   "description": "",
   "repository": {
     "type": "git",
     "url": "https://github.com/dotansimha/graphql-yoga.git",
-    "directory": "packages/subscription"
+    "directory": "packages/event-target/typed-event-target"
   },
   "scripts": {
+    "prepack": "bob prepack",
     "check": "tsc --pretty --noEmit"
   },
   "keywords": [
@@ -18,6 +19,17 @@
   ],
   "author": "Laurin Quast <laurinquast@googlemail.com>",
   "license": "MIT",
+  "buildOptions": {
+    "input": "./src/index.ts"
+  },
+  "dependencies": {
+    "@repeaterjs/repeater": "^3.0.4",
+    "tslib": "^2.3.1"
+  },
+  "devDependencies": {
+    "event-target-polyfill": "0.0.3"
+  },
+  "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "exports": {
@@ -35,20 +47,6 @@
         "default": "./dist/esm/index.js"
       }
     },
-    "./*": {
-      "require": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/cjs/*.js"
-      },
-      "import": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
-      },
-      "default": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
-      }
-    },
     "./package.json": "./package.json"
   },
   "typings": "dist/typings/index.d.ts",
@@ -58,14 +56,5 @@
   "publishConfig": {
     "directory": "dist",
     "access": "public"
-  },
-  "dependencies": {
-    "@graphql-yoga/typed-event-target": "^0.0.0",
-    "@repeaterjs/repeater": "^3.0.4",
-    "tslib": "^2.3.1"
-  },
-  "devDependencies": {
-    "event-target-polyfill": "0.0.3"
-  },
-  "type": "module"
+  }
 }
