--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -4,28 +4,28 @@
 	"private": true,
 	"scripts": {
 		"prepare": "svelte-kit sync",
-		"dev": "yarn prepare && svelte-kit dev",
+		"dev": "yarn prepare && vite dev",
 		"test": "jest",
 		"build": "yarn prepare && vite build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview -p 3007",
+		"preview": "vite preview --port 3007",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "1.0.0-next.57",
+		"@sveltejs/adapter-auto": "1.0.0-next.55",
 		"@sveltejs/kit": "1.0.0-next.370",
+		"@types/jest": "^28.0.0",
 		"@typescript-eslint/eslint-plugin": "5.30.6",
 		"@typescript-eslint/parser": "5.30.6",
-		"@types/jest": "^28.0.0",
 		"eslint": "8.19.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-svelte3": "4.0.0",
+		"jest": "^28.0.0",
 		"prettier": "2.7.1",
 		"prettier-plugin-svelte": "2.7.0",
-		"jest": "^28.0.0",
 		"puppeteer": "15.3.2",
 		"svelte": "3.49.0",
 		"svelte-check": "2.8.0",
