--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -24,7 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react": "17.0.39",
-    "@vitejs/plugin-react-refresh": "1.3.6",
+    "@vitejs/plugin-react": "1.3.2",
     "vite": "2.9.14"
   },
   "dependencies": {
