--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "dist",
-
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "experimentalDecorators": true,
     "module": "node16",
-    "target": "es2018",
+    "target": "ES2020",
     "lib": ["es6", "esnext", "es2015", "dom", "webworker"],
     "suppressImplicitAnyIndexErrors": true,
     "moduleResolution": "node",
