chore: exclude defer-stream example from version bumps

--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,7 @@
     "**/__tests__/**",
     "**/test/**",
     "**/tests/**",
-    "**/__fixtures__/**"
+    "**/__fixtures__/**",
+    "examples/defer-stream/**"
   ]
 }
