--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,13 @@ jobs:
       - name: Build Packages
         run: yarn build
 
-      - name: Build Sveltekit
-        run: yarn workspace sveltekit build
-        if: matrix.node-version > 12
+      # - name: Build Sveltekit
+      #   run: yarn workspace sveltekit build
+      #   if: matrix.node-version > 12
 
-      - name: Start Sveltekit
-        run: yarn workspace sveltekit preview & sleep 5
-        if: matrix.node-version > 12
+      # - name: Start Sveltekit
+      #   run: yarn workspace sveltekit preview & sleep 5
+      #   if: matrix.node-version > 12
 
       - name: Run Tests
         run: yarn test
