chore: nice try pothos

--- a/examples/file-upload-nextjs-pothos/tsconfig.json
+++ b/examples/file-upload-nextjs-pothos/tsconfig.json
@@ -4,10 +4,9 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
