--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,10 @@
       "matchPackagePrefixes": "@envelop"
     }
   ],
-  "ignoreDeps": ["@types/react"],
+  "ignoreDeps": [
+    "@types/react",
+    "@sveltejs/kit"
+  ],
   "ignorePaths": [
     "**/__tests__/**",
     "**/test/**",
