is Node.js 18 weird

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Use Node
         uses: actions/setup-node@master
         with:
-          node-version: 18.x
+          node-version: 16
           cache: 'yarn'
 
       - name: Setup NPM credentials
