--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Use Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 16
           cache: 'yarn'
 
       - name: Install Dependencies using Yarn
