chore: restore keys should be the same as the key for this wizardry

--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -26,7 +26,7 @@ jobs:
           path: '**/node_modules'
           key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
           restore-keys: |
-            ${{runner.os}}-18-node-modules-
+            ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
       - name: Install Dependencies using Yarn
         run: yarn install --ignore-engines --frozen-lockfile --immutable
         if: steps.node-modules-cache-algolia-publish.outputs.cache-hit != 'true'
