--- a/.github/workflows/deployment-e2e.yml
+++ b/.github/workflows/deployment-e2e.yml
@@ -29,7 +29,7 @@ jobs:
           path: '**/node_modules'
           key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
           restore-keys: |
-            ${{runner.os}}-18-node-modules-
+            ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
       - name: Install Dependencies using Yarn
         run: yarn install --ignore-engines --frozen-lockfile --immutable
         if: steps.node-modules-cache-deployment-e2e.outputs.cache-hit != 'true'
