--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -24,7 +24,7 @@ jobs:
           path: '**/node_modules'
           key: ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
           restore-keys: |
-            ${{runner.os}}-18-node-modules-
+            ${{runner.os}}-18-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
       - name: Install Dependencies using Yarn
         run: yarn install --ignore-engines --frozen-lockfile --immutable
         if: steps.node-modules-cache-website-integrity.outputs.cache-hit != 'true'
