no fail fast pls

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12, 14, 16, 18]
+      fail-fast: false
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
