--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,17 +23,11 @@
     "skipLibCheck": true,
     "paths": {
       "graphql-yoga": ["packages/graphql-yoga/src/index.ts"],
-      "@graphql-yoga/subscription": ["packages/subscription/src/index.ts"],
-      "@graphql-yoga/render-graphiql": [
-        "packages/render-graphiql/src/index.ts"
-      ],
       "@graphql-yoga/plugin-*": ["packages/plugins/*/src/index.ts"],
-      "@graphql-yoga/typed-event-target": [
-        "packages/event-target/typed-event-target/src/index.ts"
+      "@graphql-yoga/*-event-target": [
+        "packages/event-target/*-event-target/src/index.ts"
       ],
-      "@graphql-yoga/redis-event-target": [
-        "packages/event-target/redis-event-target/src/index.ts"
-      ]
+      "@graphql-yoga/*": ["packages/*/src/index.ts"]
     },
     "jsx": "preserve"
   },
