--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "skipLibCheck": true,
     "paths": {
       "graphql-yoga": ["packages/graphql-yoga/src/index.ts"],
+      "graphql-yoga/*": ["packages/graphql-yoga/src/extras/*.ts"],
       "@graphql-yoga/subscription": ["packages/subscription/src/index.ts"],
       "@graphql-yoga/render-graphiql": [
         "packages/render-graphiql/src/index.ts"
