--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@graphql-yoga/node": "2.13.4",
-    "cross-undici-fetch": "^0.4.13",
+    "@whatwg-node/fetch": "^0.0.2",
     "graphql": "^16.1.0"
   },
   "devDependencies": {
