--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -28,15 +28,15 @@
     "vite": "2.9.14"
   },
   "dependencies": {
-    "@graphql-tools/url-loader": "^7.11.0",
-    "copy-to-clipboard": "^3.3.1",
-    "graphiql": "^1.8.8",
-    "graphiql-explorer": "^0.9.0",
-    "graphql": "^16.3.0",
+    "@graphql-tools/url-loader": "7.13.0",
+    "copy-to-clipboard": "3.3.1",
+    "graphiql": "1.8.8",
+    "graphiql-explorer": "0.9.0",
+    "graphql": "16.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "use-url-search-params": "^2.5.1",
-    "json-bigint-patch": "^0.0.8"
+    "use-url-search-params": "2.5.1",
+    "json-bigint-patch": "0.0.8"
   },
   "main": "dist/yoga-graphiql.umd.js",
   "module": "dist/yoga-graphiql.es.js",
