--- a/packages/plugins/response-cache/package.json
+++ b/packages/plugins/response-cache/package.json
@@ -54,7 +54,7 @@
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0",
-    "@graphql-yoga/common": "^2.10.0"
+    "graphql-yoga": "^2.13.4"
   },
   "type": "module"
 }
