--- a/packages/plugins/persisted-queries/package.json
+++ b/packages/plugins/persisted-queries/package.json
@@ -59,7 +59,7 @@
     "tslib": "^2.3.1"
   },
   "peerDependencies": {
-    "@graphql-yoga/common": "^2.3.0"
+    "graphql-yoga": "^2.13.4"
   },
   "devDependencies": {
     "bob-the-bundler": "^1.5.1"
