--- a/examples/azure-function/package.json
+++ b/examples/azure-function/package.json
@@ -6,6 +6,9 @@
     "build": "node build.js",
     "check": "tsc --pretty --noEmit"
   },
+  "dependencies": {
+    "graphql-yoga": "2.13.4"
+  },
   "devDependencies": {
     "@azure/functions": "3.2.0",
     "esbuild": "0.14.50",
