--- a/packages/plugins/automatic-persisted-queries/package.json
+++ b/packages/plugins/automatic-persisted-queries/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "@graphql-yoga/plugin-persisted-queries",
+  "name": "@graphql-yoga/plugin-automatic-persisted-queries",
   "version": "0.0.0",
-  "description": "",
+  "description": "APQ plugin for GraphQL-Yoga.",
   "repository": {
     "type": "git",
     "url": "https://github.com/dotansimha/graphql-yoga.git",
-    "directory": "packages/plugins/persisted-queries"
+    "directory": "packages/plugins/automatic-persisted-documents"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
-    "prepack": "bob prepack",
     "check": "tsc --pretty --noEmit"
   },
   "author": "Arda TANRIKULU <ardatanrikulu@gmail.com>",
@@ -28,20 +27,6 @@
       "default": {
         "types": "./dist/typings/index.d.ts",
         "default": "./dist/esm/index.js"
-      }
-    },
-    "./*": {
-      "require": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/cjs/*.js"
-      },
-      "import": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
-      },
-      "default": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
       }
     },
     "./package.json": "./package.json"
@@ -62,7 +47,7 @@
     "graphql-yoga": "^2.13.4"
   },
   "devDependencies": {
-    "bob-the-bundler": "^1.5.1"
+    "@types/lru-cache": "5.1.1"
   },
   "type": "module"
 }
