feat: persisted operations plugin

--- a/packages/plugins/persisted-operations/package.json
+++ b/packages/plugins/persisted-operations/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@graphql-yoga/plugin-automatic-persisted-queries",
+  "name": "@graphql-yoga/persisted-operations",
   "version": "0.0.0",
-  "description": "APQ plugin for GraphQL Yoga.",
+  "description": "Persisted Operations plugin for GraphQL Yoga.",
   "repository": {
     "type": "git",
     "url": "https://github.com/dotansimha/graphql-yoga.git",
-    "directory": "packages/plugins/automatic-persisted-queries"
+    "directory": "packages/plugins/persisted-operations"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -38,9 +38,6 @@
   "publishConfig": {
     "directory": "dist",
     "access": "public"
-  },
-  "dependencies": {
-    "tiny-lru": "^8.0.2"
   },
   "peerDependencies": {
     "graphql-yoga": "^2.13.4"
