--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   ],
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
   "devDependencies": {
+    "@whatwg-node/fetch": "0.1.0",
     "@babel/core": "7.18.9",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-decorators": "7.18.9",
