--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "typescript": "4.7.4"
   },
   "resolutions": {
+    "@whatwg-node/fetch": "0.1.1",
     "@changesets/apply-release-plan": "6.0.0",
     "graphql": "16.5.0",
     "@types/react": "17.0.39",
