chore: upgrade to latest envelop/response-cache

--- a/packages/plugins/response-cache/package.json
+++ b/packages/plugins/response-cache/package.json
@@ -49,8 +49,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@envelop/response-cache": "2.4.0",
-    "tslib": "^2.3.1"
+    "@envelop/response-cache": "^3.0.0"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0",
