--- a/.github/workflows/deployment-e2e.yml
+++ b/.github/workflows/deployment-e2e.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   test-deploy:
     strategy:
+      fail-fast: false
       matrix:
         plan: ['cf-worker', 'azure-function', 'aws-lambda', 'vercel-function']
     name: ${{ matrix.plan }}
