--- a/examples/cloudflare-advanced/package.json
+++ b/examples/cloudflare-advanced/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudflare-advanced",
+  "name": "example-cloudflare-advanced",
   "version": "0.7.3",
   "private": true,
   "scripts": {
