--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "error-masking-example",
+  "name": "example-error-handling",
   "private": true,
   "version": "0.13.4",
   "scripts": {
