--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fastify-modules-example",
+  "name": "example-fastify-modules",
   "private": true,
   "version": "0.13.4",
   "scripts": {
