--- a/examples/file-upload-nexus/package.json
+++ b/examples/file-upload-nexus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-upload-nexus",
+  "name": "example-file-upload-nexus",
   "private": true,
   "version": "0.13.4",
   "scripts": {
