--- a/examples/graphql-config/package.json
+++ b/examples/graphql-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-config-example",
+  "name": "example-graphql-config",
   "private": true,
   "version": "0.13.4",
   "scripts": {
