--- a/examples/issue-template/package.json
+++ b/examples/issue-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "issue-template",
+  "name": "example-issue-template",
   "version": "1.13.4",
   "private": true,
   "devDependencies": {
