--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,14 @@
     "skipLibCheck": true,
     "paths": {
       "graphql-yoga": ["packages/graphql-yoga/src/index.ts"],
+      "graphql-yoga/schema": ["packages/graphql-yoga/src/schema.ts"],
+      "graphql-yoga/subscription": [
+        "packages/graphql-yoga/src/subscription.ts"
+      ],
+      "@graphql-yoga/subscription": ["packages/subscription/src/index.ts"],
+      "@graphql-yoga/render-graphiql": [
+        "packages/render-graphiql/src/index.ts"
+      ],
       "@graphql-yoga/plugin-*": ["packages/plugins/*/src/index.ts"],
       "@graphql-yoga/*-event-target": [
         "packages/event-target/*-event-target/src/index.ts"
