--- a/examples/graphql-ws/package.json
+++ b/examples/graphql-ws/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-ws",
+  "name": "example-graphql-ws",
   "private": true,
   "version": "0.10.4",
   "scripts": {
@@ -7,10 +7,10 @@
     "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
-    "graphql-yoga": "2.13.4",
-    "graphql": "16.5.0",
-    "graphql-ws": "0.10.4",
-    "ws": "8.8.1"
+    "graphql-yoga": "^2.13.4",
+    "graphql": "^16.5.0",
+    "graphql-ws": "^5.9.1",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "ts-node": "10.9.1",
