--- a/examples/subscriptions/package.json
+++ b/examples/subscriptions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "subscriptions-example",
+  "name": "example-subscriptions",
   "private": true,
   "version": "0.13.4",
   "scripts": {
