--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -39,18 +39,32 @@
         "default": "./dist/esm/index.js"
       }
     },
-    "./*": {
+    "./schema": {
       "require": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/cjs/*.js"
+        "types": "./dist/typings/schema.d.ts",
+        "default": "./dist/cjs/schema.js"
       },
       "import": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
+        "types": "./dist/typings/schema.d.ts",
+        "default": "./dist/esm/schema.js"
       },
       "default": {
-        "types": "./dist/typings/*.d.ts",
-        "default": "./dist/esm/*.js"
+        "types": "./dist/typings/schema.d.ts",
+        "default": "./dist/esm/schema.js"
+      }
+    },
+    "./subscription": {
+      "require": {
+        "types": "./dist/typings/subscription.d.ts",
+        "default": "./dist/cjs/subscription.js"
+      },
+      "import": {
+        "types": "./dist/typings/subscription.d.ts",
+        "default": "./dist/esm/subscription.js"
+      },
+      "default": {
+        "types": "./dist/typings/subscription.d.ts",
+        "default": "./dist/esm/subscription.js"
       }
     },
     "./package.json": "./package.json"
