--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "noImplicitThis": true,
     "strict": true,
