chore: format files and adjust prettierignore list

--- a/.prettierignore
+++ b/.prettierignore
@@ -12,3 +12,8 @@ coverage/
 examples/sveltekit
 **/generated/**
 .next
+
+# Custom Generated files
+packages/graphql-yoga/src/graphiql-html.ts
+packages/graphql-yoga/src/landing-page-html.ts
+packages/render-graphiql/src/graphiql.ts
