choire: prettier ci (#1523)
* chore: ensure prettier runs

* chore: format files and adjust prettierignore list

--- a/.prettierignore
+++ b/.prettierignore
@@ -7,3 +7,13 @@ yarn.lock
 **/dist/**
 coverage/
 .next/
+.bob
+.svelte-kit
+examples/sveltekit
+**/generated/**
+.next
+
+# Custom Generated files
+packages/graphql-yoga/src/graphiql-html.ts
+packages/graphql-yoga/src/landing-page-html.ts
+packages/render-graphiql/src/graphiql.ts
