Error Masking for Yoga hooks & Respect result processor in case of an error (#1521)
* Respect result processors in case of an error

* Prettier Hello?

* :))

* CI :))

--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -44,7 +44,7 @@ jobs:
           SITE_URL: https://www.graphql-yoga.com/
 
       - name: Format
-        run: yarn format
+        run: yarn prettier
 
       - name: Compare
         run: git diff origin/${{ github.base_ref }}.. -- website/algolia-lockfile.json
