do not use exports map :)

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "workspaces": [
     "packages/*",
     "packages/plugins/*",
+    "packages/client/*",
     "packages/event-target/*",
     "examples/**/*",
     "benchmark/*",
