--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -64,5 +64,6 @@
     "@repeaterjs/repeater": "^3.0.4",
     "tslib": "^2.3.1"
   },
-  "type": "module"
+  "type": "module",
+  "sideEffects": true
 }
