--- a/website/package.json
+++ b/website/package.json
@@ -6,36 +6,37 @@
     "build": "next build",
     "algolia-sync": "node scripts/algolia-ci.mjs",
     "postbuild": "npx next-sitemap && node scripts/sitemap-ci.mjs",
-    "dev": "concurrently -r \"next-remote-watch ./docs ./routes.ts ./src/pages/_app.tsx ./src/pages/_document.tsx\" \"wait-on -s 1 http://localhost:3000 && open-cli http://localhost:3000\"",
+    "dev": "next dev",
     "next": "next",
     "start": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "check": "exit 0"
   },
   "devDependencies": {
-    "@guild-docs/algolia": "0.2.2",
     "@next/bundle-analyzer": "^12.0.10",
     "@types/concurrently": "^6.4.0",
     "@types/mdx-js__react": "^1.5.5",
-    "@types/node": "16.11.52",
-    "@types/react": "^17.0.39",
     "@types/react-dom": "^18.0.0",
     "bob-tsm": "^1.0.0",
-    "concurrently": "^7.0.0",
-    "cross-env": "^7.0.3",
-    "esbuild": "^0.15.0",
-    "esbuild-register": "^3.3.2",
-    "next-remote-watch": "^1.0.0",
-    "open-cli": "^7.0.1",
     "fast-xml-parser": "^4.0.7",
-    "typescript": "4.7.4",
-    "wait-on": "^6.0.1"
+    "@guild-docs/algolia": "0.0.7-alpha-2078e88.0",
+    "@theguild/tailwind-config": "0.0.1-alpha-a6d555a.0",
+    "@types/node": "16.11.52",
+    "@types/react": "17.0.47",
+    "@typescript-eslint/eslint-plugin": "5.26.0",
+    "@typescript-eslint/parser": "5.26.0",
+    "cross-env": "7.0.3",
+    "concurrently": "7.2.2",
+    "esbuild": "0.14.46",
+    "esbuild-register": "3.3.3",
+    "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "8.5.0",
+    "typescript": "4.6.4",
+    "next-remote-watch": "1.0.0",
+    "open-cli": "7.0.1",
+    "wait-on": "6.0.1"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.5",
-    "@chakra-ui/react": "^1.8.3",
-    "@chakra-ui/theme-tools": "^1.3.4",
-    "@chakra-ui/utils": "^1.10.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@graphql-yoga/node": "2.13.9",
@@ -43,17 +44,24 @@
     "@guild-docs/client": "^3.0.2",
     "@guild-docs/server": "^4.0.0",
     "@mdx-js/react": "^2.1.1",
-    "@theguild/components": "1.12.0",
-    "framer-motion": "^7.0.0",
-    "graphql": "16.6.0",
-    "next": "^12.0.10",
-    "next-i18next": "^12.0.0",
-    "next-seo": "^5.2.0",
+    "graphql": "16.5.0",
     "next-sitemap": "^3.0.0",
+    "@graphql-inspector/core": "latest",
+    "@graphql-inspector/github": "latest",
+    "@monaco-editor/react": "4.3.1",
+    "@theguild/components": "2.0.0-alpha-9d29815.0",
+    "guild-docs": "3.0.0-alpha-2078e88.0",
+    "framer-motion": "6.3.11",
+    "next": "12.1.6",
+    "patch-package": "6.4.7",
+    "next-i18next": "11.0.0",
+    "next-seo": "5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "react-use": "^17.3.2",
-    "shiki": "^0.11.0"
+    "react-feather": "2.0.9",
+    "react-flip-move": "3.0.4",
+    "shiki": "0.10.1",
+    "react-icons": "4.4.0",
+    "react-use": "17.4.0"
   }
 }
