fix: skip lb check

--- a/examples/defer-stream/tsconfig.json
+++ b/examples/defer-stream/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "target": "esnext",
     "moduleResolution": "node",
     "module": "commonjs",
