skip lib checks

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -6,7 +6,8 @@
     "moduleResolution": "node",
     "declaration": true,
     "sourceMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "include": ["./**/*.ts"]
 }
