--- a/examples/fastify-modules/tsconfig.json
+++ b/examples/fastify-modules/tsconfig.json
@@ -4,9 +4,10 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "sourceMap": true,
-    "lib": ["esnext"],
+    "lib": ["esnext", "DOM"],
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   }
 }
