--- a/examples/graphql-config/tsconfig.json
+++ b/examples/graphql-config/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["esnext"]
+    "lib": ["esnext"],
+    "skipLibCheck": true
   }
 }
