--- a/examples/error-handling/tsconfig.json
+++ b/examples/error-handling/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "target": "esnext",
     "moduleResolution": "node",
     "module": "commonjs",
