--- a/examples/fastify/tsconfig.json
+++ b/examples/fastify/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "commonjs",
     "sourceMap": true,
     "lib": ["esnext", "DOM", "DOM.Iterable"],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   }
 }
