--- a/examples/subscriptions/tsconfig.json
+++ b/examples/subscriptions/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "commonjs",
     "sourceMap": true,
     "lib": ["esnext", "DOM", "DOM.Iterable"],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "test"]
