--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -19,7 +19,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/pages/docs/[[...slug]].tsx.old"
+    "src/pages/docs/[[...slug]].tsx.old",
+    "src/pages/tutorial/[[...slug]].tsx.old"
   ],
   "exclude": ["node_modules"]
 }
