chore: update typescript output dir

--- a/examples/issue-template/tsconfig.json
+++ b/examples/issue-template/tsconfig.json
@@ -6,7 +6,8 @@
     "sourceMap": true,
     "lib": ["esnext", "DOM", "DOM.Iterable"],
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "dist"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "test"]
