--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,7 @@
       "matchPackagePrefixes": "@envelop"
     }
   ],
-  "ignoreDeps": ["@types/react", "@sveltejs/kit", "graphiql"],
+  "ignoreDeps": ["@sveltejs/kit", "graphiql"],
   "ignorePaths": [
     "**/__tests__/**",
     "**/test/**",
