--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
     "build-website": "yarn build && cd website && yarn build"
   },
+  "lint-staged": {
+    "packages/**/src/**/*.{ts,tsx}": [
+      "eslint --fix"
+    ],
+    "**/*.{ts,tsx,graphql,yml,md,json}": [
+      "prettier --write"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dotansimha/graphql-yoga.git"
@@ -63,12 +71,12 @@
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
     "bob-the-bundler": "4.0.0",
-    "eslint": "^8.15.0",
-    "graphql": "^16.1.0",
+    "eslint": "^8.21.0",
+    "graphql": "^16.5.0",
     "husky": "^8.0.0",
     "jest": "^28.0.0",
     "patch-package": "^6.4.7",
-    "prettier": "^2.4.1",
+    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.2",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.6",
