--- a/website/package.json
+++ b/website/package.json
@@ -2,10 +2,11 @@
   "name": "website",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "algolia-sync": "node scripts/algolia-ci.mjs",
-    "postbuild": "npx next-sitemap && node scripts/sitemap-ci.mjs",
+    "postbuild": "next-sitemap --config next-sitemap.config.cjs && node scripts/sitemap-ci.mjs",
     "dev": "next dev",
     "next": "next",
     "start": "next start",
@@ -13,55 +14,28 @@
     "check": "exit 0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.10",
-    "@types/concurrently": "^6.4.0",
-    "@types/mdx-js__react": "^1.5.5",
-    "@types/react-dom": "^18.0.0",
-    "bob-tsm": "^1.0.0",
+    "@next/bundle-analyzer": "^12.2.5",
+    "@types/react-dom": "^18.0.6",
     "fast-xml-parser": "^4.0.7",
-    "@guild-docs/algolia": "0.0.7-alpha-2078e88.0",
-    "@theguild/tailwind-config": "0.0.1-alpha-a6d555a.0",
-    "@types/node": "16.11.52",
-    "@types/react": "17.0.47",
-    "@typescript-eslint/eslint-plugin": "5.26.0",
-    "@typescript-eslint/parser": "5.26.0",
+    "@guild-docs/algolia": "0.2.2",
+    "@theguild/tailwind-config": "0.0.2",
+    "@types/node": "18.7.2",
+    "@types/react": "18.0.17",
     "cross-env": "7.0.3",
-    "concurrently": "7.2.2",
-    "esbuild": "0.14.46",
-    "esbuild-register": "3.3.3",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "8.5.0",
-    "typescript": "4.6.4",
-    "next-remote-watch": "1.0.0",
-    "open-cli": "7.0.1",
-    "wait-on": "6.0.1"
+    "typescript": "4.7.4"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@graphql-yoga/node": "2.13.9",
     "@graphql-yoga/render-graphiql": "2.13.8",
-    "@guild-docs/client": "^3.0.2",
-    "@guild-docs/server": "^4.0.0",
-    "@mdx-js/react": "^2.1.1",
     "graphql": "16.5.0",
-    "next-sitemap": "^3.0.0",
+    "next-sitemap": "^3.1.17",
     "@graphql-inspector/core": "latest",
     "@graphql-inspector/github": "latest",
     "@monaco-editor/react": "4.3.1",
-    "@theguild/components": "2.0.0-alpha-9d29815.0",
-    "guild-docs": "3.0.0-alpha-2078e88.0",
-    "framer-motion": "6.3.11",
-    "next": "12.1.6",
-    "patch-package": "6.4.7",
-    "next-i18next": "11.0.0",
-    "next-seo": "5.4.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-feather": "2.0.9",
-    "react-flip-move": "3.0.4",
-    "shiki": "0.10.1",
-    "react-icons": "4.4.0",
-    "react-use": "17.4.0"
+    "@theguild/components": "2.0.5",
+    "guild-docs": "3.1.2",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
